# hario-core

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: python-package.yml
benchmarks/: bench.py  bench_core.py  measure.py
docs/: api.md  changelog.md  contributing.md  index.md
src/hario_core/: __init__.py  har_parser.py  id_generators.py  interfaces.py  pipeline.py  strategies.py  worker.py
src/hario_core/models/: har_1_2.py
src/hario_core/models/extensions/: chrome_devtools.py
src/hario_core/parse/: __init__.py  har_parser.py  interfaces.py
src/hario_core/transform/: __init__.py  interfaces.py  pipeline.py  strategies.py  transform.py
src/hario_core/utils/: defaults.py  enricher.py  normalizer.py  transform.py
tests/: conftest.py  samples.py  test_defaults.py  test_enricher.py  test_har_parser.py  test_id.py  test_id_generators.py  test_normalizer.py  test_pipeline.py  test_transform.py
